tests/machine/x/cobol/unary_neg.cob
       IDENTIFICATION DIVISION.
       PROGRAM-ID. UNARY_NEG.
       DATA DIVISION.
       WORKING-STORAGE SECTION.
       01 TMP PIC 9 VALUE 0.
       PROCEDURE DIVISION.
       COMPUTE TMP = - 3
       DISPLAY TMP
       COMPUTE TMP = 5 + (- 2)
       DISPLAY TMP
       STOP RUN.
